objects/Origination_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Advance_on_Global_Loan__c</fullName>
        <label>Advance on Global Loan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Advance_on_Global_Note__c</fullName>
        <label>Advance on Global Note</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Advance_on_UPB__c</fullName>
        <label>Advance on UPB</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Agent)</relationshipLabel>
        <relationshipName>Origination_Summaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aging_Covenant_Limit_Days__c</fullName>
        <label>Aging Covenant Limit (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Covenant_Limit__c</fullName>
        <label>Aging Covenant Limit (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appraisal Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Appraisal Firm)</relationshipLabel>
        <relationshipName>Origination_Summaries4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appraisal_Review_Date__c</fullName>
        <label>Appraisal Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Review_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appraisal Review Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Appraisal Review Firm)</relationshipLabel>
        <relationshipName>Origination_Summaries5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <label>Appraised Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Complete_Value__c</fullName>
        <label>As Complete Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Boarding_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boarding Form</label>
        <referenceTo>Boarding_Form__c</referenceTo>
        <relationshipLabel>Origination Summaries</relationshipLabel>
        <relationshipName>Origination_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BofI_Max_Asset_Advance__c</fullName>
        <label>BofI Max Asset Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Review_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Review Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Budget Review Firm)</relationshipLabel>
        <relationshipName>Origination_Summaries6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delinquency_Ineligibility_Days__c</fullName>
        <label>Delinquency Ineligibility (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Developer)</relationshipLabel>
        <relationshipName>Origination_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Budget__c</fullName>
        <label>Development Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Report_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environmental Report Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Environmental Report Firm)</relationshipLabel>
        <relationshipName>Origination_Summaries7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environmental_Report_Type__c</fullName>
        <label>Environmental Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EDR</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Review_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environmental Review Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Environmental Review Firm)</relationshipLabel>
        <relationshipName>Origination_Summaries8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exit_Fee__c</fullName>
        <label>Exit Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Extension_Duration_months__c</fullName>
        <label>Extension Duration (months)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Type__c</fullName>
        <label>Extension Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term Extension</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Curtailment</fullName>
                </value>
                <value>
                    <fullName>Extend Draw Period</fullName>
                </value>
                <value>
                    <fullName>Match to Global Facility</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Wind-Down</fullName>
                </value>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Match to Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flood_Insurance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flood Insurance Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <label>Flood Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Reserve_Amount__c</fullName>
        <label>Interest Reserve Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Reserve_Coverage_months__c</fullName>
        <label>Interest Reserve Coverage (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Reserve_Structure__c</fullName>
        <label>Interest Reserve Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unfunded Reserve</fullName>
                </value>
                <value>
                    <fullName>Funded Reserve at BofI</fullName>
                </value>
                <value>
                    <fullName>Funded Reserve at 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Reserve_Type__c</fullName>
        <label>Interest Reserve Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Static</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Reserve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Reserve?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTC__c</fullName>
        <label>LTC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LTPP__c</fullName>
        <label>LTPP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <label>LTV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lockout_Period_Yield_Maintenance_Months__c</fullName>
        <label>Lockout Period/Yield Maintenance- Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Coverage__c</fullName>
        <label>Loss Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Accordion_Exposure__c</fullName>
        <label>Max Accordion Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Use_Non_Use_Assessment_Frequency__c</fullName>
        <label>Min Use/Non Use Assessment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Note_Amount__c</fullName>
        <label>Minimum Note Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Property_Value_Non_SFR__c</fullName>
        <label>Minimum Property Value Non-SFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Property_Value_SFR__c</fullName>
        <label>Minimum Property Value SFR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Usage_Fee__c</fullName>
        <label>Minimum Usage Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Usage_Fee__c</fullName>
        <label>Non-Usage Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Extensions__c</fullName>
        <label>Number of Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Origination Summaries</relationshipLabel>
        <relationshipName>Origination_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Participation_Deal_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participation Deal Summary</label>
        <referenceTo>Participation_Deal_Summary__c</referenceTo>
        <relationshipLabel>Origination Summaries</relationshipLabel>
        <relationshipName>Origination_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <label>Property Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Postal_Code_Zip__c</fullName>
        <label>Property Postal Code/Zip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <label>Property Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ramp_Up_Period_Months_from_Close__c</fullName>
        <label>Ramp Up Period (Months from Close)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries (Seller)</relationshipLabel>
        <relationshipName>Origination_Summaries3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicer__c</fullName>
        <label>Servicer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Summaries</relationshipLabel>
        <relationshipName>Origination_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Static_Reserve__c</fullName>
        <label>Static Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Cost__c</fullName>
        <label>Total Project Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Reserve_Months__c</fullName>
        <label>Variable Reserve (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Origination Summary</label>
    <nameField>
        <displayFormat>OS {000000}</displayFormat>
        <label>Origination Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Origination Summaries</pluralLabel>
    <recordTypes>
        <fullName>CRESL_SFDC2</fullName>
        <active>true</active>
        <label>CRESL SFDC2</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPL_SFDC2</fullName>
        <active>true</active>
        <description>IPL SFDC2</description>
        <label>IPL SFDC2</label>
    </recordTypes>
    <recordTypes>
        <fullName>NRELF_SFDC2</fullName>
        <active>true</active>
        <label>NRELF SFDC2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RELF_SFDC2</fullName>
        <active>true</active>
        <label>RELF SFDC2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Extension_Duration_Rule</fullName>
        <active>true</active>
        <description>Needs to be Number Only</description>
        <errorConditionFormula>AND( NOT( ISBLANK  (Extension_Duration_months__c )), 
     NOT( ISNUMBER (Extension_Duration_months__c ))
)</errorConditionFormula>
        <errorDisplayField>Extension_Duration_months__c</errorDisplayField>
        <errorMessage>Extension Duration needs to be a Number</errorMessage>
    </validationRules>
</CustomObject>